# Chronovault

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: ollama.rs
src-tauri/src/commands/: files.rs  gamification.rs  mod.rs  search.rs
src-tauri/src/database/: mod.rs  schema.rs
src-tauri/src/watcher/: handler.rs  mod.rs
src/components/explorer/: ExplorerView.tsx
src/components/graph/: GraphView.tsx
src/components/layout/: AppLayout.tsx  Onboarding.tsx  Sidebar.tsx  ToastContainer.tsx  TopBar.tsx
src/components/placeholders/: GamificationPlaceholder.tsx  GraphPlaceholder.tsx  SettingsPlaceholder.tsx
src/components/timeline/: Timeline.tsx  TimelineCluster.tsx  TimelineItem.tsx
src/hooks/: useFileWatcher.ts
src/lib/: i18n.ts  tauri.ts  types.ts  utils.ts
src/stores/: fileStore.ts  settingsStore.ts  toastStore.ts  uiStore.ts
