[package]
name = "chronovault"
version = "0.1.0"
description = "ChronoVault — Revolutionärer File Manager für Windows"
authors = ["Franz"]
edition = "2021"

[lib]
name = "chronovault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File System Watcher — nutzt Windows ReadDirectoryChangesW
notify = "8"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Datenbank — SQLite embedded mit Vector Search (sqlite-vec)
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.3"
zerocopy = "0.7" # Recommended for passing vectors to sqlite-vec

# Zeitstempel
chrono = { version = "0.4", features = ["serde"] }

# HTTP Client — für Ollama REST API (Phase 2)
reqwest = { version = "0.12", features = ["json"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Verzeichnisse — Standard-Pfade (Home, Desktop, etc.)
dirs = "6"
